--- a/Examples/Example-05-smoothing/styles.css
+++ b/Examples/Example-05-smoothing/styles.css
@@ -3,7 +3,7 @@ body {
     margin: 0;
     overflow: hidden;
     height: 100%;
-    background-image: url("http://mobilemedicalcare.org/wp-content/uploads/2015/11/blue-sky-1330598792xLu.jpg")
+    background-image: url(https://www.hcbookfinder.com/wp-content/uploads/2016/06/Clouds-Background-HD.jpg)
 }
 
 /* Scale canvas with resize attribute to full size */
